fixed padding for form to show better on smaller screens

--- a/src/app/shared/ui/notification-form/notification-form.component.scss
+++ b/src/app/shared/ui/notification-form/notification-form.component.scss
@@ -3,6 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
+  padding-bottom: 8px;
   border-bottom: 1px solid #eee;
   margin-bottom: 16px;
 }
@@ -30,6 +31,7 @@ header {
   
   .modal-body {
     padding: 16px;
+    padding-bottom: 8px
   }
   
   .notification-form {
